2012-07-30  Nick Alcock  <nick.alcock@oracle.com>

	Support CTF types for global kernel variables (the ` operator).

	* libdtrace-ctf: Updated: ctf_lookup_variable() is now available.
	* libdtrace/dt_module.c (dtrace_symbol_type): Use it in new
	code for kernel module symbol->type mapping.
	(dtrace_lookup_by_name): Only update the syminfo pointer if it
	is non-NULL.
	(dt_modsym_update): Many new unimportant symbols: look for name
	prefixes in most cases, not arbitrary substrings.
	(dt_module_getctf): Improve CTF failure error message.
	(dt_module_load): Change the CTF section name.
	(dt_kern_module_init): Change comment accordingly.
	* libproc/Psymtab.c (Pbuild_file_symtab): Change the CTF
	section name.  Support CTF section name prefixes.

	Testsuite updates.

	* test/unittest/aggs/tst.subr.d: `cpu_lock -> `text_mutex;
	`vfssw_lock -> `tasklist_lock.

	* test/unittest/assocs/err.D_OP_INCOMPAT.dupgtype.d:
	`kmem_flags -> `max_pfn; `rootvp -> `cad_pid.
	* test/unittest/assocs/err.D_OP_INCOMPAT.dupttype.d: Likewise.
	* test/unittest/scalars/err.D_OP_INCOMPAT.dupgtype.d: Likewise.
	* test/unittest/scalars/err.D_OP_INCOMPAT.dupltype.d: Likewise.
	* test/unittest/scalars/err.D_OP_INCOMPAT.dupttype.d: Likewise.
	* test/unittest/funcs/err.badbcopy.d: Likewise.
	* test/unittest/funcs/err.badbcopy1.d: Likewise.
	* test/unittest/funcs/err.badbcopy2.d: Likewise.
	* test/unittest/funcs/err.badbcopy3.d: Likewise.
	* test/unittest/pointers/err.D_OP_LVAL.AddressChange.d: Likewise.
	* test/unittest/pointers/err.InvalidAddress1.d: Likewise.
	* test/unittest/struct/tst.StructDataTypes.d: Likewise.
	* test/unittest/funcs/tst.bcopy.d: Likewise.  No longer XFAILed.
	* test/unittest/inline/tst.InlineDataAssign.d: Likewise.
	* test/unittest/inline/tst.InlineExpression.d: Likewise.
	* test/unittest/inline/tst.InlineTypedef.d: Likewise.
	* test/unittest/pointers/tst.GlobalVar.d: Likewise.
	* test/unittest/pointers/tst.basic1.d: Likewise.
	* test/unittest/pointers/tst.basic2.d: Likewise.