@@ -1,1 +1,0 @@
-@@xfail: sched provider not yet implemented
